--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="top-container">
         <img class="top-cloud" src="cloud.png" alt="cloud-img">
         <h1>I'm Kanyshai.</h1>
-        <h2>a programmer</h2>
+        <h2>Mobile Application Developer(Flutter)</h2>
         <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
         <img src="mountain.png" alt="mountain-img">
     </div>
@@ -23,21 +23,21 @@
         <div class="profile">
           <img src="kanyshai.png" alt="Kanyshai's profile picture"width=15%>
           <h2>Hi!</h2>
-          <p class="intro"><em>Currently I am a student at <stong><a href="https://jyldyz.com/">Jyldyz Academy</a></stong>.</em>I am a future Web Developer and Web Designer. I ❤️ playing chess and ping pong.</p>
+          <p class="intro"><em>Currently I am looking for a job<stong><a href="https://jyldyz.com/">as a FLutter Developer</a></stong>.</em>Currently I dream about working at FAANG. I ❤️ playing chess and ping pong.</p>
         </div>
         <hr>
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
             <img class="programming-png" src="programming.png" alt="html.picture">
-            <h3>Frontend Development</h3>
-            <p>I started learning to code in May, 2021 at Jyldyz Academy. Here I am  learning HTML, CSS and JavaScript.
-            In the end of this course I am going to be a frontend web developer.</p>
+            <h3>Development</h3>
+            <p>I started learning to code at Jyldyz Academy. There I learnt  learning HTML, CSS and JavaScript.
+            And then I studied at Megacom, studied Mobile Application Development</p>
           </div> <br>
           <div class="skill-row">
             <img class="responsive-png" src="responsive.png" alt="designer.picture">
-            <h3>Web Design( UI and UX design)</h3>
-            <p>At Jyldyz Academy they also teach us UI and UX Design. But I also got another a course of UX design from Coursera by Google itself.I am studying there, too. I hope I'll gain enough knowledge in order to become a great web designer.</p>
+            <h3>Computer Literacy Teacher</h3>
+            <p>At Akyl Aiym Project: Empowering Kyrgyz women & girls with vital tech skills. I teach computer basics, including Microsoft Office & Google tools. Bridging digital gaps for 1000+women in remote Kyrgyzstan, unlocking IT growth & opportunities</p>
           </div>
         </div>
         <hr>
@@ -52,7 +52,7 @@
       
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/kanyshai-osmonova-0a91001b8/">LinkedIn</a>
-        <a class="footer-link" href="https://www.instagram.com/kanidreamer/?hl=ru">Instagram</a>
+        <a class="footer-link" href="https://www.instagram.com/kanyshaiosmonova_/?igshid=YTQwZjQ0NmI0OA%3D%3D">Instagram</a>
         <a class="footer-link" href="https://github.com/kanyshaiosmonova">Github</a>
         <a class="footer-link" href=https://www.notion.so/kanyshai-osmonova-kk-gmail-com-eed8a80ac8c642f5ac10dbbceb602f58>Notion</a>
         <p class="copyright">© 2021 Kanyshai Osmonova.</p>
