--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="profile">
           <img src="kanyshai.png" alt="Kanyshai's profile picture"width=15%>
           <h2>Hi!</h2>
-          <p class="intro"><em>Currently I am looking for a job<stong><a href="https://jyldyz.com/">as a FLutter Developer</a></stong>.</em>Currently I dream about working at FAANG. I ❤️ playing chess and ping pong.</p>
+          <p class="intro"><em>Currently I am looking for a job<stong><a href="https://jyldyz.com/">as a FLutter Developer</a></stong>.</em>I dream about working at FAANG. I ❤️ playing chess and ping pong.</p>
         </div>
         <hr>
         <div class="skills">
