--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           <h2>My Skills.</h2>
           <div class="skill-row">
             <img class="programming-png" src="programming.png" alt="html.picture">
-            <h3>Development</h3>
+            <h3>My Coding Path</h3>
             <p>I started learning to code at Jyldyz Academy. There I learnt  learning HTML, CSS and JavaScript.
-            And then I studied at Megacom, studied Mobile Application Development</p>
+            And then I studied studied Mobile Application Development at Megacom</p>
           </div> <br>
           <div class="skill-row">
             <img class="responsive-png" src="responsive.png" alt="designer.picture">
