--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           </div> <br>
           <div class="skill-row">
             <img class="responsive-png" src="responsive.png" alt="designer.picture">
-            <h3>Computer Literacy Teacher</h3>
-            <p>At Akyl Aiym Project: Empowering Kyrgyz women & girls with vital tech skills. I teach computer basics, including Microsoft Office & Google tools. Bridging digital gaps for 1000+women in remote Kyrgyzstan, unlocking IT growth & opportunities</p>
+            <h3><a href='https://instagram.com/akyl_aiym.kg?igshid=MzRlODBiNWFlZA=='>Computer Literacy Teacher</a></h3>
+            <p><a href='https://instagram.com/akyl_aiym.kg?igshid=MzRlODBiNWFlZA=='><b></b>At Akyl Aiym Project</a></b>: Empowering Kyrgyz women & girls with vital tech skills. I teach computer basics, including Microsoft Office & Google tools. Bridging digital gaps for 1000+women in remote Kyrgyzstan, unlocking IT growth & opportunities</p>
           </div>
         </div>
         <hr>
