--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h2>Get In Touch</h2>
           <h3>If you have any questions or suggestions, please do not hesitate to contact me.</h3>
           <p class="contact-message">You can contact me by the following links:</p>
-          <a class="btn" href=mailto:kanyshai.osmonova.kk@gmail.com>Contact Me</a>
+          <a class="btn" href=mailto:osmonova.kanyshai@gmail.com>Contact Me</a>
         </div>
       </div>
       
